Code complete on stage M10
